--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   },
   "dependencies": {
     "bootstrap": "^4.6.1",
+    "bootstrap-social": "^5.1.1",
     "jquery": "^3.6.0",
     "popper.js": "^1.12.9"
   }
